--- a/style.css
+++ b/style.css
@@ -18,6 +18,10 @@ a:hover {
     cursor: pointer;
 }
 
+.baseline{
+    font-size: 22px;
+}
+
 #page-loading-blocs-notifaction {
     position: fixed;
     top: 0;
