Correction responsive mobile

--- a/style.css
+++ b/style.css
@@ -701,7 +701,9 @@ a {
 
 .social {
     max-width: 400px;
-    margin: auto auto auto auto;
+    margin: auto;
+    display: flex;
+    justify-content: space-between;
 }
 
 h2 {
